Nova pasta/tp2-henrique_caio/tp2/src/Frontend/Parser/LangParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Frontend/Parser/LangParser.y
-----------------------------------------------------------------------------


terminal '.' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Program                           (0)
	Program -> StructureList                           (1)
	StructureList -> StructureList Structure           (2)
	StructureList ->                                   (3)
	Structure -> Id '(' ParamList ')' TypeList CodeBlock   (4)
	ParamList -> ParamList ',' Param                   (5)
	ParamList -> Param                                 (6)
	ParamList ->                                       (7)
	Param -> Id '::' PTy                               (8)
	List -> List ',' Expr                              (9)
	List ->                                            (10)
	CodeBlock -> '{' StmtList '}'                      (11)
	CodeBlock -> Stmt                                  (12)
	StmtList -> StmtList Stmt                          (13)
	StmtList ->                                        (14)
	Stmt -> 'if' '(' Expr ')' CodeBlock 'else' CodeBlock   (15)
	Stmt -> 'if' '(' Expr ')' CodeBlock                (16)
	Stmt -> 'iterate' '(' Expr ')' CodeBlock           (17)
	Stmt -> 'print' Expr ';'                           (18)
	Stmt -> 'read' Id ';'                              (19)
	Stmt -> 'return' List ';'                          (20)
	Stmt -> Id '=' Expr ';'                            (21)
	Stmt -> PTy Id Init ';'                            (22)
	Expr -> Expr '+' Expr                              (23)
	Expr -> Expr '*' Expr                              (24)
	Expr -> Expr '-' Expr                              (25)
	Expr -> Expr '/' Expr                              (26)
	Expr -> Expr '%' Expr                              (27)
	Expr -> Expr '<' Expr                              (28)
	Expr -> Expr '==' Expr                             (29)
	Expr -> Expr '!=' Expr                             (30)
	Expr -> Expr '&&' Expr                             (31)
	Expr -> '!' Expr                                   (32)
	Expr -> '-' Expr                                   (33)
	Expr -> float                                      (34)
	Expr -> int                                        (35)
	Expr -> char                                       (36)
	Expr -> 'true'                                     (37)
	Expr -> 'false'                                    (38)
	Expr -> Id                                         (39)
	Expr -> '(' Expr ')'                               (40)
	Expr -> '[' Expr ']'                               (41)
	Id -> id                                           (42)
	TypeList -> TypeList ',' PTy                       (43)
	TypeList -> ':' PTy                                (44)
	TypeList ->                                        (45)
	PTy -> 'Int'                                       (46)
	PTy -> 'Bool'                                      (47)
	PTy -> 'Float'                                     (48)
	PTy -> 'Char'                                      (49)
	Init -> '=' Expr                                   (50)
	Init ->                                            (51)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'Int'          { Token _ TInt }
	'Char'         { Token _ TChar }
	'Bool'         { Token _ TBool }
	'Float'        { Token _ TFloat }
	'['            { Token _ TLBracket }
	']'            { Token _ TRBracket }
	'.'            { Token _ TDot }
	'('            { Token _ TLParen }
	')'            { Token _ TRParen }
	'!'            { Token _ TNot }
	'*'            { Token _ TMul }
	'/'            { Token _ TDiv }
	'%'            { Token _ TMod }
	'+'            { Token _ TAdd }
	'-'            { Token _ TSub }
	'<'            { Token _ TRelac }
	'=='           { Token _ TEqual }
	'!='           { Token _ TNEqual }
	'&&'           { Token _ TConj }
	'='            { Token _ TAssign }
	'if'           { Token _ TIf }
	'else'         { Token _ TElse }
	'read'         { Token _ TRead }
	'print'        { Token _ TPrint }
	'return'       { Token _ TReturn }
	'iterate'      { Token _ TIterate }
	'{'            { Token _ TLKeys }
	'}'            { Token _ TRKeys }
	':'            { Token _ TColon }
	'::'           { Token _ TDoubleColon }
	','            { Token _ TComma }
	';'            { Token _ TSemicolon }
	'true'         { Token _ TTrue }
	'false'        { Token _ TFalse }
	id             { Token _ (TIdent $$) }
	float          { Token _ (TNumberF $$) }
	char           { Token _ (TCharLit $$) }
	int            { Token _ (TNumber $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Program         rule  1
	StructureList   rules 2, 3
	Structure       rule  4
	ParamList       rules 5, 6, 7
	Param           rule  8
	List            rules 9, 10
	CodeBlock       rules 11, 12
	StmtList        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22
	Expr            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41
	Id              rule  42
	TypeList        rules 43, 44, 45
	PTy             rules 46, 47, 48, 49
	Init            rules 50, 51

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . Program                          (rule 0)

	id             reduce using rule 3
	%eof           reduce using rule 3

	Program        goto state 3
	StructureList  goto state 2

State 1

	Program -> . StructureList                          (rule 1)


	StructureList  goto state 2

State 2

	Program -> StructureList .                          (rule 1)
	StructureList -> StructureList . Structure          (rule 2)

	id             shift, and enter state 6
	%eof           reduce using rule 1

	Structure      goto state 4
	Id             goto state 5

State 3

	%start_parser -> Program .                          (rule 0)

	%eof           accept


State 4

	StructureList -> StructureList Structure .          (rule 2)

	id             reduce using rule 2
	%eof           reduce using rule 2


State 5

	Structure -> Id . '(' ParamList ')' TypeList CodeBlock    (rule 4)

	'('            shift, and enter state 7


State 6

	Id -> id .                                          (rule 42)

	']'            reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'/'            reduce using rule 42
	'%'            reduce using rule 42
	'+'            reduce using rule 42
	'-'            reduce using rule 42
	'<'            reduce using rule 42
	'=='           reduce using rule 42
	'!='           reduce using rule 42
	'&&'           reduce using rule 42
	'='            reduce using rule 42
	'::'           reduce using rule 42
	','            reduce using rule 42
	';'            reduce using rule 42


State 7

	Structure -> Id '(' . ParamList ')' TypeList CodeBlock    (rule 4)

	')'            reduce using rule 7
	','            reduce using rule 7
	id             shift, and enter state 6

	ParamList      goto state 8
	Param          goto state 9
	Id             goto state 10

State 8

	Structure -> Id '(' ParamList . ')' TypeList CodeBlock    (rule 4)
	ParamList -> ParamList . ',' Param                  (rule 5)

	')'            shift, and enter state 12
	','            shift, and enter state 13


State 9

	ParamList -> Param .                                (rule 6)

	')'            reduce using rule 6
	','            reduce using rule 6


State 10

	Param -> Id . '::' PTy                              (rule 8)

	'::'           shift, and enter state 11


State 11

	Param -> Id '::' . PTy                              (rule 8)

	'Int'          shift, and enter state 18
	'Char'         shift, and enter state 19
	'Bool'         shift, and enter state 20
	'Float'        shift, and enter state 21

	PTy            goto state 17

State 12

	Structure -> Id '(' ParamList ')' . TypeList CodeBlock    (rule 4)

	'Int'          reduce using rule 45
	'Char'         reduce using rule 45
	'Bool'         reduce using rule 45
	'Float'        reduce using rule 45
	'if'           reduce using rule 45
	'read'         reduce using rule 45
	'print'        reduce using rule 45
	'return'       reduce using rule 45
	'iterate'      reduce using rule 45
	'{'            reduce using rule 45
	':'            shift, and enter state 16
	','            reduce using rule 45
	id             reduce using rule 45

	TypeList       goto state 15

State 13

	ParamList -> ParamList ',' . Param                  (rule 5)

	id             shift, and enter state 6

	Param          goto state 14
	Id             goto state 10

State 14

	ParamList -> ParamList ',' Param .                  (rule 5)

	')'            reduce using rule 5
	','            reduce using rule 5


State 15

	Structure -> Id '(' ParamList ')' TypeList . CodeBlock    (rule 4)
	TypeList -> TypeList . ',' PTy                      (rule 43)

	'Int'          shift, and enter state 18
	'Char'         shift, and enter state 19
	'Bool'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'if'           shift, and enter state 27
	'read'         shift, and enter state 28
	'print'        shift, and enter state 29
	'return'       shift, and enter state 30
	'iterate'      shift, and enter state 31
	'{'            shift, and enter state 32
	','            shift, and enter state 33
	id             shift, and enter state 6

	CodeBlock      goto state 23
	Stmt           goto state 24
	Id             goto state 25
	PTy            goto state 26

State 16

	TypeList -> ':' . PTy                               (rule 44)

	'Int'          shift, and enter state 18
	'Char'         shift, and enter state 19
	'Bool'         shift, and enter state 20
	'Float'        shift, and enter state 21

	PTy            goto state 22

State 17

	Param -> Id '::' PTy .                              (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 18

	PTy -> 'Int' .                                      (rule 46)

	'Int'          reduce using rule 46
	'Char'         reduce using rule 46
	'Bool'         reduce using rule 46
	'Float'        reduce using rule 46
	')'            reduce using rule 46
	'if'           reduce using rule 46
	'read'         reduce using rule 46
	'print'        reduce using rule 46
	'return'       reduce using rule 46
	'iterate'      reduce using rule 46
	'{'            reduce using rule 46
	','            reduce using rule 46
	id             reduce using rule 46


State 19

	PTy -> 'Char' .                                     (rule 49)

	'Int'          reduce using rule 49
	'Char'         reduce using rule 49
	'Bool'         reduce using rule 49
	'Float'        reduce using rule 49
	')'            reduce using rule 49
	'if'           reduce using rule 49
	'read'         reduce using rule 49
	'print'        reduce using rule 49
	'return'       reduce using rule 49
	'iterate'      reduce using rule 49
	'{'            reduce using rule 49
	','            reduce using rule 49
	id             reduce using rule 49


State 20

	PTy -> 'Bool' .                                     (rule 47)

	'Int'          reduce using rule 47
	'Char'         reduce using rule 47
	'Bool'         reduce using rule 47
	'Float'        reduce using rule 47
	')'            reduce using rule 47
	'if'           reduce using rule 47
	'read'         reduce using rule 47
	'print'        reduce using rule 47
	'return'       reduce using rule 47
	'iterate'      reduce using rule 47
	'{'            reduce using rule 47
	','            reduce using rule 47
	id             reduce using rule 47


State 21

	PTy -> 'Float' .                                    (rule 48)

	'Int'          reduce using rule 48
	'Char'         reduce using rule 48
	'Bool'         reduce using rule 48
	'Float'        reduce using rule 48
	')'            reduce using rule 48
	'if'           reduce using rule 48
	'read'         reduce using rule 48
	'print'        reduce using rule 48
	'return'       reduce using rule 48
	'iterate'      reduce using rule 48
	'{'            reduce using rule 48
	','            reduce using rule 48
	id             reduce using rule 48


State 22

	TypeList -> ':' PTy .                               (rule 44)

	'Int'          reduce using rule 44
	'Char'         reduce using rule 44
	'Bool'         reduce using rule 44
	'Float'        reduce using rule 44
	'if'           reduce using rule 44
	'read'         reduce using rule 44
	'print'        reduce using rule 44
	'return'       reduce using rule 44
	'iterate'      reduce using rule 44
	'{'            reduce using rule 44
	','            reduce using rule 44
	id             reduce using rule 44


State 23

	Structure -> Id '(' ParamList ')' TypeList CodeBlock .    (rule 4)

	id             reduce using rule 4
	%eof           reduce using rule 4


State 24

	CodeBlock -> Stmt .                                 (rule 12)

	'Int'          reduce using rule 12
	'Char'         reduce using rule 12
	'Bool'         reduce using rule 12
	'Float'        reduce using rule 12
	'if'           reduce using rule 12
	'else'         reduce using rule 12
	'read'         reduce using rule 12
	'print'        reduce using rule 12
	'return'       reduce using rule 12
	'iterate'      reduce using rule 12
	'}'            reduce using rule 12
	id             reduce using rule 12
	%eof           reduce using rule 12


State 25

	Stmt -> Id . '=' Expr ';'                           (rule 21)

	'='            shift, and enter state 52


State 26

	Stmt -> PTy . Id Init ';'                           (rule 22)

	id             shift, and enter state 6

	Id             goto state 51

State 27

	Stmt -> 'if' . '(' Expr ')' CodeBlock 'else' CodeBlock    (rule 15)
	Stmt -> 'if' . '(' Expr ')' CodeBlock               (rule 16)

	'('            shift, and enter state 50


State 28

	Stmt -> 'read' . Id ';'                             (rule 19)

	id             shift, and enter state 6

	Id             goto state 49

State 29

	Stmt -> 'print' . Expr ';'                          (rule 18)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 38
	Id             goto state 39

State 30

	Stmt -> 'return' . List ';'                         (rule 20)

	','            reduce using rule 10
	';'            reduce using rule 10

	List           goto state 37

State 31

	Stmt -> 'iterate' . '(' Expr ')' CodeBlock          (rule 17)

	'('            shift, and enter state 36


State 32

	CodeBlock -> '{' . StmtList '}'                     (rule 11)

	'Int'          reduce using rule 14
	'Char'         reduce using rule 14
	'Bool'         reduce using rule 14
	'Float'        reduce using rule 14
	'if'           reduce using rule 14
	'read'         reduce using rule 14
	'print'        reduce using rule 14
	'return'       reduce using rule 14
	'iterate'      reduce using rule 14
	'}'            reduce using rule 14
	id             reduce using rule 14

	StmtList       goto state 35

State 33

	TypeList -> TypeList ',' . PTy                      (rule 43)

	'Int'          shift, and enter state 18
	'Char'         shift, and enter state 19
	'Bool'         shift, and enter state 20
	'Float'        shift, and enter state 21

	PTy            goto state 34

State 34

	TypeList -> TypeList ',' PTy .                      (rule 43)

	'Int'          reduce using rule 43
	'Char'         reduce using rule 43
	'Bool'         reduce using rule 43
	'Float'        reduce using rule 43
	'if'           reduce using rule 43
	'read'         reduce using rule 43
	'print'        reduce using rule 43
	'return'       reduce using rule 43
	'iterate'      reduce using rule 43
	'{'            reduce using rule 43
	','            reduce using rule 43
	id             reduce using rule 43


State 35

	CodeBlock -> '{' StmtList . '}'                     (rule 11)
	StmtList -> StmtList . Stmt                         (rule 13)

	'Int'          shift, and enter state 18
	'Char'         shift, and enter state 19
	'Bool'         shift, and enter state 20
	'Float'        shift, and enter state 21
	'if'           shift, and enter state 27
	'read'         shift, and enter state 28
	'print'        shift, and enter state 29
	'return'       shift, and enter state 30
	'iterate'      shift, and enter state 31
	'}'            shift, and enter state 76
	id             shift, and enter state 6

	Stmt           goto state 75
	Id             goto state 25
	PTy            goto state 26

State 36

	Stmt -> 'iterate' '(' . Expr ')' CodeBlock          (rule 17)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 74
	Id             goto state 39

State 37

	List -> List . ',' Expr                             (rule 9)
	Stmt -> 'return' List . ';'                         (rule 20)

	','            shift, and enter state 72
	';'            shift, and enter state 73


State 38

	Stmt -> 'print' Expr . ';'                          (rule 18)
	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)

	'*'            shift, and enter state 62
	'/'            shift, and enter state 63
	'%'            shift, and enter state 64
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'<'            shift, and enter state 67
	'=='           shift, and enter state 68
	'!='           shift, and enter state 69
	'&&'           shift, and enter state 70
	';'            shift, and enter state 71


State 39

	Expr -> Id .                                        (rule 39)

	']'            reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'/'            reduce using rule 39
	'%'            reduce using rule 39
	'+'            reduce using rule 39
	'-'            reduce using rule 39
	'<'            reduce using rule 39
	'=='           reduce using rule 39
	'!='           reduce using rule 39
	'&&'           reduce using rule 39
	','            reduce using rule 39
	';'            reduce using rule 39


State 40

	Expr -> '[' . Expr ']'                              (rule 41)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 61
	Id             goto state 39

State 41

	Expr -> '(' . Expr ')'                              (rule 40)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 60
	Id             goto state 39

State 42

	Expr -> '!' . Expr                                  (rule 32)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 59
	Id             goto state 39

State 43

	Expr -> '-' . Expr                                  (rule 33)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 58
	Id             goto state 39

State 44

	Expr -> 'true' .                                    (rule 37)

	']'            reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'/'            reduce using rule 37
	'%'            reduce using rule 37
	'+'            reduce using rule 37
	'-'            reduce using rule 37
	'<'            reduce using rule 37
	'=='           reduce using rule 37
	'!='           reduce using rule 37
	'&&'           reduce using rule 37
	','            reduce using rule 37
	';'            reduce using rule 37


State 45

	Expr -> 'false' .                                   (rule 38)

	']'            reduce using rule 38
	')'            reduce using rule 38
	'*'            reduce using rule 38
	'/'            reduce using rule 38
	'%'            reduce using rule 38
	'+'            reduce using rule 38
	'-'            reduce using rule 38
	'<'            reduce using rule 38
	'=='           reduce using rule 38
	'!='           reduce using rule 38
	'&&'           reduce using rule 38
	','            reduce using rule 38
	';'            reduce using rule 38


State 46

	Expr -> float .                                     (rule 34)

	']'            reduce using rule 34
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'/'            reduce using rule 34
	'%'            reduce using rule 34
	'+'            reduce using rule 34
	'-'            reduce using rule 34
	'<'            reduce using rule 34
	'=='           reduce using rule 34
	'!='           reduce using rule 34
	'&&'           reduce using rule 34
	','            reduce using rule 34
	';'            reduce using rule 34


State 47

	Expr -> char .                                      (rule 36)

	']'            reduce using rule 36
	')'            reduce using rule 36
	'*'            reduce using rule 36
	'/'            reduce using rule 36
	'%'            reduce using rule 36
	'+'            reduce using rule 36
	'-'            reduce using rule 36
	'<'            reduce using rule 36
	'=='           reduce using rule 36
	'!='           reduce using rule 36
	'&&'           reduce using rule 36
	','            reduce using rule 36
	';'            reduce using rule 36


State 48

	Expr -> int .                                       (rule 35)

	']'            reduce using rule 35
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'/'            reduce using rule 35
	'%'            reduce using rule 35
	'+'            reduce using rule 35
	'-'            reduce using rule 35
	'<'            reduce using rule 35
	'=='           reduce using rule 35
	'!='           reduce using rule 35
	'&&'           reduce using rule 35
	','            reduce using rule 35
	';'            reduce using rule 35


State 49

	Stmt -> 'read' Id . ';'                             (rule 19)

	';'            shift, and enter state 57


State 50

	Stmt -> 'if' '(' . Expr ')' CodeBlock 'else' CodeBlock    (rule 15)
	Stmt -> 'if' '(' . Expr ')' CodeBlock               (rule 16)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 56
	Id             goto state 39

State 51

	Stmt -> PTy Id . Init ';'                           (rule 22)

	'='            shift, and enter state 55
	';'            reduce using rule 51

	Init           goto state 54

State 52

	Stmt -> Id '=' . Expr ';'                           (rule 21)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 53
	Id             goto state 39

State 53

	Stmt -> Id '=' Expr . ';'                           (rule 21)
	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)

	'*'            shift, and enter state 62
	'/'            shift, and enter state 63
	'%'            shift, and enter state 64
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'<'            shift, and enter state 67
	'=='           shift, and enter state 68
	'!='           shift, and enter state 69
	'&&'           shift, and enter state 70
	';'            shift, and enter state 93


State 54

	Stmt -> PTy Id Init . ';'                           (rule 22)

	';'            shift, and enter state 92


State 55

	Init -> '=' . Expr                                  (rule 50)

	'['            shift, and enter state 40
	'('            shift, and enter state 41
	'!'            shift, and enter state 42
	'-'            shift, and enter state 43
	'true'         shift, and enter state 44
	'false'        shift, and enter state 45
	id             shift, and enter state 6
	float          shift, and enter state 46
	char           shift, and enter state 47
	int            shift, and enter state 48

	Expr           goto state 91
	Id             goto state 39

State 56

	Stmt -> 'if' '(' Expr . ')' CodeBlock 'else' CodeBlock    (rule 15)
	Stmt -> 'if' '(' Expr . ')' CodeBlock               (rule 16)
	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)

	')'            shift, and enter state 90
	'*'            shift, and enter state 62
	'/'            shift, and enter state 63
	'%'            shift, and enter state 64
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'<'            shift, and enter state 67
	'=='           shift, and enter state 68
	'!='           shift, and enter state 69
	'&&'           shift, and enter state 70


State 57

	Stmt -> 'read' Id ';' .                             (rule 19)

	'Int'          reduce using rule 19
	'Char'         reduce using rule 19
	'Bool'         reduce using rule 19
	'Float'        reduce using rule 19
	'if'           reduce using rule 19
	'else'         reduce using rule 19
	'read'         reduce using rule 19
	'print'        reduce using rule 19
	'return'       reduce using rule 19
	'iterate'      reduce using rule 19
	'}'            reduce using rule 19
	id             reduce using rule 19
	%eof           reduce using rule 19


State 58

	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)
	Expr -> '-' Expr .                                  (rule 33)

	']'            reduce using rule 33
	')'            reduce using rule 33
	'*'            shift, and enter state 62
	'/'            shift, and enter state 63
	'%'            shift, and enter state 64
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'<'            shift, and enter state 67
	'=='           shift, and enter state 68
	'!='           shift, and enter state 69
	'&&'           shift, and enter state 70
	','            reduce using rule 33
	';'            reduce using rule 33


State 59

	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)
	Expr -> '!' Expr .                                  (rule 32)

	']'            reduce using rule 32
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'%'            reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'<'            reduce using rule 32
	'=='           reduce using rule 32
	'!='           reduce using rule 32
	'&&'           reduce using rule 32
	','            reduce using rule 32
	';'            reduce using rule 32


State 60

	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)
	Expr -> '(' Expr . ')'                              (rule 40)

	')'            shift, and enter state 89
	'*'            shift, and enter state 62
	'/'            shift, and enter state 63
	'%'            shift, and enter state 64
	'+'            shift, and enter state 65
	'-'            shift, and enter state 66
	'<'            shift, and enter state 67
	'=='           shift, and enter state 68
	'!='           shift, and enter state 69
	'&&'           shift, and enter state 70


State 61

	Expr -> Expr . '+' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '-' Expr                             (rule 25)
	Expr -> Expr . '/' Expr                             (rule 26)
	Expr -> Expr . '%' Expr                             (rule 27)
	Expr -> Expr . '<' Expr                             (rule 28)
	Expr -> Expr . '==' Expr                            (rule 29)
	Expr -> Expr . '!=' Expr                            (rule 30)
	Expr -> Expr . '&&' Expr                            (rule 31)
	Expr -> '[' Expr . ']'                              (rule 41)
